# utils2

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  utils2Config.cmake.in
gtest/: gtest.cpp  gtest_configreader.cpp  gtest_configreader.hpp  gtest_logger.cpp  gtest_logger.hpp  gtest_logger_thread.cpp  gtest_logger_thread.hpp  gtest_mainlogger.cpp  gtest_mainlogger.hpp  test.json
include/: configreader.hpp  logger.hpp  logger_thread.hpp  mainlogger.hpp  utils2_global.h
src/: configreader.cpp  logger.cpp  logger_thread.cpp  mainlogger.cpp
